--- a/MyApplication/app/src/main/res/layout/item_alert_dialog.xml
+++ b/MyApplication/app/src/main/res/layout/item_alert_dialog.xml
@@ -28,8 +28,8 @@
                 android:id="@+id/btnAnlysis"
                 android:background="@drawable/cell_shape_boder"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="analysis" />
+                android:layout_height="match_parent"
+                android:text="view" />
         </TableRow>
 
     </TableLayout>
