--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,15 @@
         android:layout_above="@id/line">
 
     </android.support.v7.widget.RecyclerView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragmentContent">
+    </FrameLayout>
+
 
     <EditText
+        android:backgroundTint="@android:color/transparent"
         android:id="@+id/editInput"
         android:layout_width="match_parent"
         android:layout_height="45dp"
@@ -45,13 +52,12 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
         android:layout_toStartOf="@id/btnSend"
-        android:background="@drawable/edittext_boder"
         android:drawablePadding="20dp"
         android:inputType="textLongMessage"
         android:maxLines="1"
         android:paddingLeft="7dp"
         android:paddingRight="7dp"
-        android:textColorHint="@color/colorPrimaryDark"
+        android:textColorHint="@color/black"
         android:textSize="15sp"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="20dp"
