--- a/MyApplication/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/MyApplication/app/src/main/res/layout/custom_alert_dialog.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/black">
 
@@ -19,6 +19,8 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="16dp"
+            android:textColor="@color/colorIndivateTab"
+            android:textSize="20dp"
             android:text="Sentences" />
 
         <TextView
@@ -30,6 +32,8 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="16dp"
+            android:textColor="@color/colorIndivateTab"
+            android:textSize="20dp"
             android:text="Analysis" />
     </LinearLayout>
 
@@ -42,8 +46,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerAlertDialog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:descendantFocusability="beforeDescendants"
+        android:layout_height="wrap_content"
         android:layoutDirection="ltr"></android.support.v7.widget.RecyclerView>
 
 
