--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:background="@color/grey_200"
-        android:layout_above="@id/btnSend"/>tr
+        android:layout_above="@id/btnSend"/>
 
     <android.support.v7.widget.RecyclerView
+        android:background="@color/lesspastel"
         android:id="@+id/recyclerChat"
         android:layoutDirection="ltr"
         android:descendantFocusability="beforeDescendants"
@@ -38,7 +39,10 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragmentContent">
+        android:id="@+id/fragmentContent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
     </FrameLayout>
 
 
@@ -62,9 +66,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginRight="20dp"
         android:layout_toLeftOf="@id/btnSend"
-        android:hint="@string/message"/>
+        />
 
-
+    <requestFocus />
 
 
 </RelativeLayout>
