--- a/MyApplication/app/src/main/res/layout/item_context.xml
+++ b/MyApplication/app/src/main/res/layout/item_context.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="input"
+        android:textSize="35dp"
         android:textColor="#ffffff" />
 
     <TextView
@@ -28,5 +29,13 @@
         android:layout_alignParentTop="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="output"
+        android:textSize="35dp"
         android:textColor="#ffffff" />
+    <ImageView
+        android:id="@+id/imgExample"
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
