--- a/MyApplication/app/src/main/res/layout/loading_main.xml
+++ b/MyApplication/app/src/main/res/layout/loading_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/black"
     android:orientation="vertical">
 
@@ -41,6 +42,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="2dp"
                 android:text="" />
 
             <com.example.nguyenvulong.androiddemo.HorizontalDottedProgress
