--- a/MyApplication/app/src/main/res/layout/navigation_main.xml
+++ b/MyApplication/app/src/main/res/layout/navigation_main.xml
@@ -2,10 +2,13 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:openDrawer="start">
+
+
 
     <include
         layout="@layout/activity_main"
@@ -14,14 +17,16 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        android:background="@color/black"
+        android:background="@color/lesspastel"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:itemTextColor="@color/colorIndivateTab"
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@color/colorPrimary"
         app:itemTextAppearance="?android:attr/textAppearanceLarge"
         app:menu="@menu/activity_main" />
 
 </android.support.v4.widget.DrawerLayout>
+
