--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:background="@color/colorIndivateTab">
 
 
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="#2196F3"-->
+        <!--android:minHeight="?attr/actionBarSize" >-->
+    <!--</android.support.v7.widget.Toolbar>-->
+
+
     <ImageButton
         android:id="@+id/btnSend"
         android:layout_width="45dp"
