--- a/MyApplication/app/src/main/res/layout/item_custom_view_analysis_fragment.xml
+++ b/MyApplication/app/src/main/res/layout/item_custom_view_analysis_fragment.xml
@@ -85,6 +85,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_corner5"
         android:padding="10dp"
+        android:textSize="15dp"
         android:text="classification_report"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/black"
